--- a/DateFinder/ClientApp/package.json
+++ b/DateFinder/ClientApp/package.json
@@ -6,8 +6,10 @@
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
+    "moment": "^2.28.0",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
