--- a/DateFinder/ClientApp/package.json
+++ b/DateFinder/ClientApp/package.json
@@ -9,13 +9,16 @@
     "moment": "^2.28.0",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-day-picker": "^7.4.8",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "sweetalert2": "^10.3.1",
+    "sweetalert2-react-content": "^3.2.0"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
