--- a/DateFinder/ClientApp/package.json
+++ b/DateFinder/ClientApp/package.json
@@ -15,6 +15,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-tooltip": "^4.2.10",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2",
     "sweetalert2": "^10.3.1",
