--- a/DateFinder/ClientApp/package.json
+++ b/DateFinder/ClientApp/package.json
@@ -6,6 +6,7 @@
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
+    "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.8",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
