--- a/DateFinder/ClientApp/package.json
+++ b/DateFinder/ClientApp/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^16.9.49",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
