--- a/When/ClientApp/package.json
+++ b/When/ClientApp/package.json
@@ -1,64 +1,65 @@
 {
-  "name": "datefinder",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.2",
-    "@types/react": "^16.9.49",
-    "@types/react-copy-to-clipboard": "^4.3.0",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.4.1",
-    "merge": "^1.2.1",
-    "moment": "^2.28.0",
-    "oidc-client": "^1.9.0",
-    "react": "^16.0.0",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-day-picker": "^7.4.8",
-    "react-dom": "^16.0.0",
-    "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
-    "react-tooltip": "^4.2.10",
-    "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2",
-    "sweetalert2": "^10.3.1",
-    "sweetalert2-react-content": "^3.2.0"
-  },
-  "devDependencies": {
-    "ajv": "^6.9.1",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-plugin-flowtype": "^4.6.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
-    "nan": "^2.14.1",
-    "typescript": "^3.9.7"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "scripts": {
-    "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "when",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@types/jest": "^26.0.14",
+		"@types/node": "^14.11.2",
+		"@types/react": "^16.9.49",
+		"@types/react-copy-to-clipboard": "^4.3.0",
+		"@types/react-dom": "^16.9.8",
+		"@types/react-router-dom": "^5.1.5",
+		"@types/reactstrap": "^8.5.1",
+		"bootstrap": "^4.1.3",
+		"jquery": "^3.4.1",
+		"merge": "^1.2.1",
+		"moment": "^2.28.0",
+		"oidc-client": "^1.9.0",
+		"react": "^16.0.0",
+		"react-copy-to-clipboard": "^5.0.2",
+		"react-day-picker": "^7.4.8",
+		"react-dom": "^16.0.0",
+		"react-router-bootstrap": "^0.25.0",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "^3.4.1",
+		"react-tooltip": "^4.2.10",
+		"reactstrap": "^8.4.1",
+		"rimraf": "^2.6.2",
+		"sweetalert2": "^10.3.1",
+		"sweetalert2-react-content": "^3.2.0"
+	},
+	"devDependencies": {
+		"ajv": "^6.9.1",
+		"cross-env": "^5.2.0",
+		"eslint": "^6.8.0",
+		"eslint-config-react-app": "^5.2.0",
+		"eslint-plugin-flowtype": "^4.6.0",
+		"eslint-plugin-import": "^2.20.1",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-react": "^7.18.3",
+		"nan": "^2.14.1",
+		"typescript": "^3.9.7"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"scripts": {
+		"start": "rimraf ./build && react-scripts start",
+		"build": "react-scripts build",
+		"test": "cross-env CI=true react-scripts test --env=jsdom",
+		"eject": "react-scripts eject",
+		"lint": "eslint ./src/"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
