--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "When",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Paccos/When.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Paccos/When/issues"
-  },
-  "homepage": "https://github.com/Paccos/When#readme"
+	"name": "When",
+	"version": "1.0.0",
+	"description": "WARNING: This is an empty package.json in order to make Heroku buildpacks work for our embedded React app...",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Paccos/When.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Paccos/When/issues"
+	},
+	"homepage": "https://github.com/Paccos/When#readme"
 }
