--- a/When/appsettings.json
+++ b/When/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": {"DBConnection": "User ID=dev;Password=1234;Server=localhost;Port=5432;Database=whenpolls;Integrated Security=true;Pooling=true;"},
   "Logging": {
       "LogLevel": {
       "Default": "Information",
