Automatically run EF migrations on deployment

--- a/When/When.csproj
+++ b/When/When.csproj
@@ -58,4 +58,8 @@
     </ItemGroup>
   </Target>
 
+  <Target Name="PrePublishTarget" AfterTargets="Publish">
+    <Exec Command="dotnet ef database update" />
+  </Target>
+
 </Project>
