--- a/When/ClientApp/package.json
+++ b/When/ClientApp/package.json
@@ -22,6 +22,7 @@
 		"react-router-bootstrap": "^0.25.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "^3.4.1",
+		"react-spinners": "^0.9.0",
 		"react-tooltip": "^4.2.10",
 		"reactstrap": "^8.4.1",
 		"rimraf": "^2.6.2",
