--- a/When/ClientApp/package.json
+++ b/When/ClientApp/package.json
@@ -3,7 +3,6 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@types/jest": "^26.0.14",
 		"@types/node": "^14.11.2",
 		"@types/react": "^16.9.49",
 		"@types/react-copy-to-clipboard": "^4.3.0",
@@ -30,6 +29,11 @@
 		"sweetalert2-react-content": "^3.2.0"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.11.5",
+		"@testing-library/react": "^11.1.0",
+		"@types/jest": "^26.0.15",
+		"@types/testing-library__jest-dom": "^5.9.5",
+		"@types/testing-library__react": "^10.2.0",
 		"ajv": "^6.9.1",
 		"cross-env": "^5.2.0",
 		"eslint": "^6.8.0",
@@ -39,6 +43,7 @@
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-react": "^7.18.3",
 		"nan": "^2.14.1",
+		"ts-jest": "^26.4.3",
 		"typescript": "^3.9.7"
 	},
 	"eslintConfig": {
